--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto+Slab:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -975,6 +976,203 @@
     </section>
     <!-- /.page -->
 
+    <section class="hot">
+      <div class="container">
+        <div class="hot-wrapper">
+          <div class="hot-slider">
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <img
+                    src="img/hot/slide-1.png"
+                    alt="slide 1"
+                    class="hot-slider__img"
+                  />
+                  <div class="hot__pin">Hot</div>
+                  <div class="hot-slider__info">
+                    <img
+                      src="img/hot/slider-img.png"
+                      alt="avatar"
+                      class="hot-slider__avatar"
+                    />
+                    <div class="hot-slider__author">
+                      <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
+                      <span class="hot-slider__job">Photographer</span>
+                    </div>
+                    <h2 class="hot-slider__title">
+                      <a href="#"
+                        >Readers' Choice winners: Your wine country favorites</a
+                      >
+                    </h2>
+                    <button class="button hot-button">
+                      <img
+                        src="img/hot/Images.svg"
+                        alt="Icon: images"
+                        class="button__img"
+                      />
+                      <span class="button__text">Watch photos</span>
+                      <span class="button__number">26</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/hot/slide-2.jpg"
+                    alt="slide 2"
+                    class="hot-slider__img"
+                  />
+                  <div class="hot-slider__info">
+                    <img
+                      src="img/hot/slider-img.png"
+                      alt="avatar"
+                      class="hot-slider__avatar"
+                    />
+                    <div class="hot-slider__author">
+                      <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
+                      <span class="hot-slider__job">Photographer</span>
+                    </div>
+                    <h2 class="hot-slider__title">
+                      <a href="#"
+                        >Readers' Choice winners: Your wine country favorites</a
+                      >
+                    </h2>
+                    <button class="button hot-button">
+                      <img
+                        src="img/hot/Images.svg"
+                        alt="Icon: images"
+                        class="button__img"
+                      />
+                      <span class="button__text">Watch photos</span>
+                      <span class="button__number">26</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/hot/slide-3.jpg"
+                    alt="slide 3"
+                    class="hot-slider__img"
+                  />
+                  <div class="hot-slider__info">
+                    <img
+                      src="img/hot/slider-img.png"
+                      alt="avatar"
+                      class="hot-slider__avatar"
+                    />
+                    <div class="hot-slider__author">
+                      <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
+                      <span class="hot-slider__job">Photographer</span>
+                    </div>
+                    <h2 class="hot-slider__title">
+                      <a href="#"
+                        >Readers' Choice winners: Your wine country favorites</a
+                      >
+                    </h2>
+                    <button class="button hot-button">
+                      <img
+                        src="img/hot/Images.svg"
+                        alt="Icon: images"
+                        class="button__img"
+                      />
+                      <span class="button__text">Watch photos</span>
+                      <span class="button__number">26</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/hot/slide-4.jpg"
+                    alt="slide 4"
+                    class="hot-slider__img"
+                  />
+                  <div class="hot-slider__info">
+                    <img
+                      src="img/hot/slider-img.png"
+                      alt="avatar"
+                      class="hot-slider__avatar"
+                    />
+                    <div class="hot-slider__author">
+                      <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
+                      <span class="hot-slider__job">Photographer</span>
+                    </div>
+                    <h2 class="hot-slider__title">
+                      <a href="#"
+                        >Readers' Choice winners: Your wine country favorites</a
+                      >
+                    </h2>
+                    <button class="button hot-button">
+                      <img
+                        src="img/hot/Images.svg"
+                        alt="Icon: images"
+                        class="button__img"
+                      />
+                      <span class="button__text">Watch photos</span>
+                      <span class="button__number">26</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <!-- If we need pagination -->
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+          <!-- /.hot-slider -->
+          <div class="hot-careers">
+            <img
+              src="img/hot/careers-img.png"
+              alt="careers image"
+              class="hot-careers__img"
+            />
+            <div class="oval"></div>
+            <div class="hot-careers__info">
+              <div class="hot-careers__category">Careers</div>
+              <h3 class="hot-careers__title">
+                <a href="#"
+                  >Had a Job Interview but No Callback? Here’s What to Do</a
+                >
+              </h3>
+              <p class="hot-careers__text">
+                Try to understand the culture of the company where you want to
+                work and be authentic in your interview, experts emphasize
+              </p>
+              <button class="button hot-button">
+                <span class="button__text">Read more</span>
+                <img
+                  src="img/recommended/Arrow.svg"
+                  alt="Icon: arrow"
+                  class="button__img"
+                />
+              </button>
+            </div>
+          </div>
+          <!-- /.hot-careers -->
+          <div class="hot-item hot__coffee">
+            <a href="#" class="hot-item__title">Is Coffee Bad for Bones?</a>
+            <p class="hot-item__text">
+              Coffee drinkers may excrete more calcium, but it doesn’t appear to
+              weaken bones
+            </p>
+            <span class="hot-item__date">Oct 15</span>
+          </div>
+          <!-- /.hot__coffee -->
+          <div class="hot-item hot__manufacture">
+            <a href="#" class="hot-item__title">What We Manufacture</a>
+            <p class="hot-item__text">
+              A global history of the factory and the modern world that all
+              should read
+            </p>
+            <span class="hot-item__date">Oct 14</span>
+          </div>
+          <!-- /.hot__manufacture -->
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.hot -->
+
     <div class="modal" tabindex="-1">
       <div class="modal__overlay">
         <a href="#" class="modal__close">
@@ -992,6 +1190,7 @@
     </div>
     <!-- /.modal -->
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
